--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Enter as many words as possible before the time runs out!</p>
         <div class="game">
           <div class="timer">
-            Time Remaining: <span id="time">99</span> seconds
+            Timer: <span id="time">5</span> seconds
           </div>
           <div class="score">
             Score: <span id="score">0</span>
@@ -28,5 +28,8 @@
           <button id="start">Start</button>
         </div>
       </div>
+      <table id="scoreboard">
+       
+      </table>
     </body>
 </html>
